--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item design">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Triunionhealthcare.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/Triunionhealthcare.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Triunionhealthcare.png">
+                                                    <img class="item-container " src="assets/images/portfolio/Triunionhealthcare.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Triunion Health Care | Act Medical Group Inc.</h5>
@@ -367,8 +367,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item design">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Acellerated1.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/Acellerated1.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Acellerated1.png">
+                                                    <img class="item-container " src="assets/images/portfolio/Acellerated1.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Accelerated Health Care | Act Medical Group Inc.</h5>
@@ -409,8 +409,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item backend">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/validationmiaa1.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/validationmiaa1.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/validationmiaa1.png">
+                                                    <img class="item-container " src="assets/images/portfolio/validationmiaa1.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Validation Module | Digits Inc.</h5>
@@ -423,8 +423,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item backend">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Validationmiaa2.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/Validationmiaa2.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Validationmiaa2.png">
+                                                    <img class="item-container " src="assets/images/portfolio/Validationmiaa2.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Validation Module | Digits Inc.</h5>
@@ -437,8 +437,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item backend">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/cmsadmin.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/cmsadmin.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/cmsadmin.png">
+                                                    <img class="item-container " src="assets/images/portfolio/cmsadmin.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Content Management Admin | Act Medical Group Inc.</h5>
@@ -451,8 +451,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item backend">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Apppacket.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/Apppacket.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Apppacket.png">
+                                                    <img class="item-container " src="assets/images/portfolio/Apppacket.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Applicant Management | Act Medical Group Inc.</h5>
@@ -465,8 +465,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item backend">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/eval.PNG">
-                                                    <img class="item-container " src="assets/images/portfolio/eval.PNG" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/eval.png">
+                                                    <img class="item-container " src="assets/images/portfolio/eval.png" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Evaluation Module | Digits Inc.</h5>
