--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item design">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Triunionhealthcare.png">
-                                                    <img class="item-container " src="assets/images/portfolio/Triunionhealthcare.png" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Triunionhealthcare.PNG">
+                                                    <img class="item-container " src="assets/images/portfolio/Triunionhealthcare.PNG" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Triunion Health Care | Act Medical Group Inc.</h5>
@@ -367,8 +367,8 @@
 
                                         <div class="col-md-4 col-6 p-0 nf-item design">
                                             <div class="item-box">
-                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Acellerated1.png">
-                                                    <img class="item-container " src="assets/images/portfolio/Acellerated1.png" alt="7" />
+                                                <a class="cbox-gallary1 mfp-image" href="assets/images/portfolio/Acellerated1.PNG">
+                                                    <img class="item-container " src="assets/images/portfolio/Acellerated1.PNG" alt="7" />
                                                     <div class="item-mask">
                                                         <div class="item-caption">
                                                             <h5 class="text-white">Accelerated Health Care | Act Medical Group Inc.</h5>
