--- a/index.html
+++ b/index.html
@@ -296,7 +296,22 @@
 
                                         <div class="time-item">
                                             <div class="item-info">
-                                                <div class="font-14">Jan 2019 - Present</div>
+                                                <div class="font-14">April 2021 - Present</div>
+
+                                                <h5 class="my-1 text-dark">Accenture | Philippines </h5>
+                                                <h5 class="my-1 text-dark"> Application Development Analyst / AWS Developer </h5>
+                                                <p></p>
+                                                <p> &#x25C9;  deep troubleshooting and issue analysis, as well as coding, testing and implementing software enhancements and/or applying patches
+                                                    <br> &#x25C9; Worked closely with the co-developer to implement bespoke projects.
+                                                    <br> &#x25C9; Collaborated with team to analyze pre-project plans and assess technical requirements to develop functioning and user - friendly computer interfaces according to bussiness goals.
+                                                    <br> &#x25C9; Increase knowledge of latest technologies , software and hardware products to implements in a variety of projects.
+
+                                            </div>
+                                        </div><!--end time-item-->
+
+                                        <div class="time-item">
+                                            <div class="item-info">
+                                                <div class="font-14">Jan 2019 - March 2021</div>
 
                                                 <h5 class="my-1 text-dark">B&D Hospice Services. | California USA </h5>
                                                 <h5 class="my-1 text-dark"> Software / Web Developer </h5>
@@ -336,7 +351,7 @@
                                     <div class="timeline">
                                         <div class="time-item">
                                             <div class="item-info">
-                                                <div class="font-14">Jan 2019 - Present</div>
+                                                <div class="font-14">Jan 2019 - March 2021</div>
 
                                                 <h5 class="my-1 text-dark">Act Medical Group Inc. | California USA</h5>
                                                 <h5 class="my-1 text-dark"> Software / Web Developer </h5>
